--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
+body {
+  background-color: #282c34;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .App {
   text-align: center;
+  background-color: #f3f3f3;
+  border-radius: 20px;
+  margin: 20px;
+  width: 600px;
+  padding: 100px;
 }
 
 .App-logo {
@@ -32,6 +45,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
